@@ -6,9 +6,8 @@ import grupo_7.sprint_1.entity.Post;
 import grupo_7.sprint_1.entity.Seller;
 import grupo_7.sprint_1.exception.InvalidArgsException;
 import grupo_7.sprint_1.exception.NotFoundException;
-import grupo_7.sprint_1.repository.inter.IBuyerRepository;
-import grupo_7.sprint_1.repository.inter.ISellerRepository;
-import grupo_7.sprint_1.service.inter.ISellerService;
+import grupo_7.sprint_1.repository.IBuyerRepository;
+import grupo_7.sprint_1.repository.ISellerRepository;
 import grupo_7.sprint_1.utils.Mapper;
 import org.springframework.stereotype.Service;
 
@@ -17,7 +16,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class SellerServiceImp implements ISellerService {
@@ -30,7 +28,7 @@ public class SellerServiceImp implements ISellerService {
     }
 
     @Override
-    public PostDto postPost(Integer sellerId, PostPostDto newPost) {
+    public PostDto addPost(Integer sellerId, AddPostDto newPost) {
 
         isPostValid(newPost);
 
@@ -50,6 +48,10 @@ public class SellerServiceImp implements ISellerService {
         }
 
         Post post = Mapper.convertPostDtoToPost(newPost);
+        if (newPost.hasPromo().equals(true)) {
+            post.setPrice(newPost.price() - (newPost.price() * newPost.discount()));
+        }
+
         foundSeller.get().getPosts().add(post);
         sellerRepository.updateSeller(foundSeller.get());
 
@@ -57,21 +59,28 @@ public class SellerServiceImp implements ISellerService {
     }
 
     @Override
-    public SellerFollowersListDto getListOrderedAlphabetically(Integer userId, boolean orderAsc) {
+    public SellerFollowersListDto getListOrderedAlphabetically(Integer userId, String order) {
         Optional<Seller> seller = sellerRepository.findById(userId);
         if (seller.isEmpty()) {
             throw new NotFoundException("No se encontro el vendedor con el id: " + userId);
         }
-        List<BuyerDtoRequisito3> listBuyerDto = seller.get().getFollowers().stream()
-                .sorted(orderAsc ? Comparator.comparing(Buyer::getUserName) : Comparator.comparing(Buyer::getUserName).reversed())
-                .map(Mapper::convertListToDto)
-                .toList();
+        List<BuyerDtoRequisito3> listBuyerDto;
+        if ("name_asc".equals(order))
+            listBuyerDto = seller.get().getFollowers().stream()
+                    .sorted(Comparator.comparing(Buyer::getUserName))
+                    .map(Mapper::convertListToDto)
+                    .toList();
+        else
+            listBuyerDto = seller.get().getFollowers().stream()
+                    .sorted(Comparator.comparing(Buyer::getUserName).reversed())
+                    .map(Mapper::convertListToDto)
+                    .toList();
 
         return new SellerFollowersListDto(seller.get().getUserId(), seller.get().getUserName(), listBuyerDto);
     }
 
     @Override
-    public SellerDto cantidadSeguidores(int id) {
+    public SellerDTO cantidadSeguidores(int id) {
         Optional<Seller> seller = sellerRepository.findById(id);
         if (seller.isEmpty()) {
             throw new NotFoundException("No se encontro el vendedor con el id: " + id);
@@ -89,13 +98,12 @@ public class SellerServiceImp implements ISellerService {
             throw new NotFoundException("El comprador con el ID " + buyerId + " no existe");
         }
         List<Integer> followedSellerIds = buyer.getFollowed().stream()
-                .map(Seller::getUserId)
-                .collect(Collectors.toList());
+                .map(Seller::getUserId).toList();
 
         List<Seller> allSellers = sellerRepository.getAllSellers();
         List<Seller> followedSellers = allSellers.stream()
                 .filter(seller -> followedSellerIds.contains(seller.getUserId()))
-                .collect(Collectors.toList());
+                .toList();
 
         List<PostDto> posts = new ArrayList<>();
         LocalDate dosSemanas = LocalDate.now().minusWeeks(2);
@@ -123,47 +131,23 @@ public class SellerServiceImp implements ISellerService {
     }
 
     @Override
-    public PostDiscountDto postPostDiscount(Integer sellerId, PostDiscountPostDto newPost) {
-        isPostValid(newPost);
-
-        List<Seller> sellers = sellerRepository.getAllSellers();
-
-        for (Seller seller : sellers) {
-            for (Post existingPost : seller.getPosts()) {
-                if (existingPost.getProduct().getProductId().equals(newPost.product().productId())) {
-                    throw new InvalidArgsException("Ya existe un producto con el mismo 'product_id'.");
-                }
-            }
+    public SellerPromosListDto getSellerPromosCount(Integer sellerId) {
+        Optional<Seller> seller = sellerRepository.findById(sellerId);
+        if (seller.isEmpty()) {
+            throw new NotFoundException("No se encontró el vendedor con el id: " + sellerId);
         }
 
-        Optional<Seller> foundSeller = sellerRepository.findById(sellerId);
-        if (foundSeller.isEmpty()) {
-            throw new NotFoundException("El vendedor indicado no existe.");
-        }
-
-        Post post = Mapper.convertPostDtoToPost(newPost);
-        foundSeller.get().getPosts().add(post);
-        sellerRepository.updateSeller(foundSeller.get());
-
-        return Mapper.convertPostToPostDto(post);
+        Integer promosCount = sellerRepository.countSellerPromos(sellerId);
+        return Mapper.convertSellerToSellerPromosListDto(seller.get(), promosCount);
     }
 
-
-    private void isPostValid(PostPostDto newPost) {
+    private void isPostValid(AddPostDto newPost) {
         if (newPost.userId() == null) {
             throw new InvalidArgsException("'user_id' no puede ser null.");
         }
 
         if (newPost.date() == null) {
             throw new InvalidArgsException("'date' no puede ser null.");
-        }
-
-        if (newPost.category() == null) {
-            throw new InvalidArgsException("'category' no puede ser null.");
-        }
-
-        if (newPost.price() == null || newPost.price() <= 0) {
-            throw new InvalidArgsException("'price' necesita ser un número positivo.");
         }
 
         if (newPost.product() == null) {
@@ -190,17 +174,6 @@ public class SellerServiceImp implements ISellerService {
         if (product.color() == null || product.color().isEmpty()) {
             throw new InvalidArgsException("'color' no puede ser null ni vacío.");
         }
-    }
-
-
-    private void isPostDiscountValid(PostDiscountPostDto newPost) {
-        if (newPost.userId() == null) {
-            throw new InvalidArgsException("'user_id' no puede ser null.");
-        }
-
-        if (newPost.date() == null) {
-            throw new InvalidArgsException("'date' no puede ser null.");
-        }
 
         if (newPost.category() == null) {
             throw new InvalidArgsException("'category' no puede ser null.");
@@ -210,29 +183,16 @@ public class SellerServiceImp implements ISellerService {
             throw new InvalidArgsException("'price' necesita ser un número positivo.");
         }
 
-        if (newPost.product() == null) {
-            throw new InvalidArgsException("'product' no puede ser null.");
+        if (newPost.hasPromo() == null) {
+            throw new InvalidArgsException("'has_promo' no puede ser null.");
         }
 
-        ProductDto product = newPost.product();
-        if (product.productId() == null) {
-            throw new InvalidArgsException("'product_id' no puede ser null.");
+        if (newPost.hasPromo() && (newPost.discount() == null || newPost.discount() <= 0)) {
+            throw new InvalidArgsException("'discount' es obligatorio cuando se establece 'has_promo' como true.");
         }
 
-        if (product.productName() == null || product.productName().isEmpty()) {
-            throw new InvalidArgsException("'product_name' no puede ser null ni vacío.");
-        }
-
-        if (product.type() == null || product.type().isEmpty()) {
-            throw new InvalidArgsException("'type' no puede ser null ni vacío.");
-        }
-
-        if (product.brand() == null || product.brand().isEmpty()) {
-            throw new InvalidArgsException("'brand' no puede ser null ni vacío.");
-        }
-
-        if (product.color() == null || product.color().isEmpty()) {
-            throw new InvalidArgsException("'color' no puede ser null ni vacío.");
+        if (!newPost.hasPromo() && (newPost.discount() != null)) {
+            throw new InvalidArgsException("'discount' no debe ser especificado cuando 'has_promo' es false.");
         }
     }
 }
